# narcos

./: .gitmodules  Cargo.toml  narcos_generation_script.py
candidates/: complex_multiplication.py  cp6_516_analysis.py  cp6_524_analysis.py  cp6_525_analysis.py  cp6_528_analysis.py  cp6_529_analysis.py  cp6_531_analysis.py  narcos_generation_script.py
candidates/alpha/: .gitignore  LICENSE  README.md
candidates/alpha/magma/: alpha_tnfs_2d.mag
candidates/alpha/magma/test/: h-deg2-non-principal.mag  h-deg3-non-principal-proj-roots.mag  h-deg3-non-principal.mag  h-deg3-principal-proj-roots.mag  utils.mag
candidates/alpha/magma/timing/: timing.mag
candidates/alpha/sage/: README.md  compute_test_vector_cyclo_kDe.sage  curves_parameters_eprint_2019_485.sage  example_bn_254.py  example_bw6_761.py  example_cocks_pinch_nfs.py  example_cocks_pinch_tnfs.py  example_curves_BD19.sage  example_curves_short_list.sage  example_curves_sparse_seed.py  example_kss16_330.py  example_kss16_766.py  test_bls_polynomials.sage  test_curves.sage  test_fm12.sage  test_mnt_k_nfs.sage  test_mnt_k_tnfs.sage  test_mntg_k_tnfs.sage
candidates/alpha/sage/tnfs/: __init__.py
candidates/alpha/sage/tnfs/alpha/: alpha2d.py  alpha3d.py  alpha_tnfs_2d.py  number_roots_mod_pk.py
candidates/alpha/sage/tnfs/curve/: aurifeuillean.py  bls.py  bls12.py  bls24.py  bn.py  cyclo_kDe.py  fotiadis_martindale.py  fst62.py  fst63.py  fst64.py  fst66.py  fst67.py  galbraith_mckee_valenca.py  kss.py  kss16.py  kss18.py  mnt_k.py  mntg.py  (+2 more)
src/: mod.rs
src/fields/: fq.rs  fq2.rs  fq6.rs  fr.rs
(+69 files in other folders)
